--- a/Views/Shared/Header.cshtml
+++ b/Views/Shared/Header.cshtml
@@ -44,11 +44,8 @@
                 <div class="thanhtimkiem">
                     <p>
                         <div class="search">
-                            <form action="#">
-                                <input type="search" name="q" placeholder="Tìm kiếm" class="inputsearch"
-                                       @*@if(isset($search))value="{{ $search }}"
-                                       @endif*@
-                                >
+                            <form asp-controller="Home" asp-action="Search" method="get">
+                                <input type="search" name="q" placeholder="Tìm kiếm" class="inputsearch">
                                 <button class="btnsearch">
                                     Tìm kiếm
                                 </button>
