Add register and login
thêm đăng nhập, đăng ký, model Account, User

--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -21,7 +21,7 @@
     <input asp-for="author" />
 	<br />
     <label asp-for="description"></label>
-	<textarea asp-for="description" /></textarea>
+	<textarea asp-for="description" ></textarea>
 	<br />
     <label asp-for="list_price" ></label>
     <input asp-for="list_price" />
