--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -21,7 +21,7 @@
 	<input asp-for="author" value=@Model.author/>
 	<br />
 	<label asp-for="description"></label>
-	<textarea asp-for="description" />@Model.description</textarea>
+	<textarea asp-for="description" >@Model.description</textarea>
 	<br />
 	<label asp-for="list_price" ></label>
 	<input asp-for="list_price" value=@Model.list_price/>
