--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,18 +1,37 @@
-﻿@model TModel
-
-@{
-    Layout = null;
+﻿@using MangaStore.Helpers
+@model List<CartDetail>
+@section css{
+    <link rel="stylesheet" href="~/css/jquery.toast.min.css">
 }
+<form asp-controller="Cart" asp-action="UpdateCart" method="post">
+    <table>
+        <tr>
+            <th>Ảnh sản phẩm</th>
+            <th>Tên sản phẩm</th>
+            <th>Giá</th>
+            <th>Số lượng</th>
+            <th>Thành tiền</th>
+            <th>Xóa sản phẩm</th>
+        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td><img src="@item.product.image" alt="" width="100" height="150"></td>
+                <td>@item.product.name</td>
+                <td>@Helper.format_VND(item.product.price) </td>
+                <td>
+                    <input type="number" name="arr[]" value=@item.quantity min="1">
+                </td>
+                <td>@Helper.format_VND(item.product.price * item.quantity)</td>
+                <td>
+                    <a href="@Url.Action("DeleteCartItem", "Cart", new { id = item.product.id })">Xóa</a>
+                </td>
+            </tr>
+        }
+    </table>
+    <input type="submit" value="Cập nhật giỏ hàng">
+</form>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <title>title</title>
-</head>
-<body>
-<div>
-      
-</div>
-</body>
-</html>
+@section js{
+    <script src="~/js/jquery.toast.min.js"></script>
+}
