--- a/Views/Home/Detail.cshtml
+++ b/Views/Home/Detail.cshtml
@@ -12,6 +12,10 @@
     <input type="hidden" name="productId" value="@Model.id">
     <input type="submit" value="Thêm vào giỏ hàng">
 </form>
+@if (ViewBag.Sample == "Có")
+{
+    <a asp-controller="Home" asp-action="Sample" asp-route-id="@Model.id" class="btn btn-primary">Đọc thử</a>   
+}
 @section js{
     <script src="~/js/jquery.toast.min.js"></script>
     <script>
