--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
 			                        if(index<=4)
 			                        {
 				                        <td class="tdsp">
-					                        <a href="" style="text-decoration: none">
+					                        <a asp-controller="Home" asp-action="Detail" asp-route-slug="@product.slug" style="text-decoration: none">
 						                        <div class="imagesp">
 							                        <img src="@product.image" class="imgsp">
 						                        </div>
@@ -109,7 +109,7 @@
 			                        if (index > 4)
 			                        {
 				                        <td class="tdsp">
-					                        <a href="" style="text-decoration: none">
+					                        <a asp-controller="Home" asp-action="Detail" asp-route-slug="@product.slug" style="text-decoration: none">
 						                        <div class="imagesp">
 							                        <img src="@product.image" class="imgsp">
 						                        </div>
