--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -57,5 +57,6 @@
 </form>
 
 <div>
+	<a asp-controller="Sample" asp-action="Index" asp-route-id="@Model.id">Thêm truyện xem trước</a>
 	<a asp-action="Index">Back to List</a>
 </div>
